implement Customer Model, Service and Controller